@@ -1266,6 +1266,7 @@ algebraicOpts (iCode * ic, eBBlock * ebp)
           if (IS_OP_LITERAL (IC_RIGHT (ic)))
             {
               double litval = operandLitValue (IC_RIGHT (ic));
+              unsigned long long llitval = operandLitValueUll (IC_RIGHT (ic));
               if (IS_GENPTR(ctype) && IS_PTR(otype))
                 {
                   unsigned long gpVal = 0;
@@ -1275,11 +1276,11 @@ algebraicOpts (iCode * ic, eBBlock * ebp)
                   if (!IS_GENPTR(otype))
                     gpVal = pointerTypeToGPByte (DCL_TYPE (otype), NULL, name);
                   gpVal <<= ((GPTRSIZE - 1) * 8);
-                  gpVal |= (unsigned long)litval;
-                  litval = gpVal;
+                  gpVal |= llitval;
+                  litval = llitval = gpVal;
                 }
               ic->op = '=';
-              IC_RIGHT (ic) = operandFromValue (valCastLiteral (operandType (IC_LEFT (ic)), litval, litval), false);
+              IC_RIGHT (ic) = operandFromValue (valCastLiteral (operandType (IC_LEFT (ic)), litval, llitval), false);
               IC_LEFT (ic) = NULL;
               SET_ISADDR (IC_RESULT (ic), 0);
             }
